--- a/package.json
+++ b/package.json
@@ -12,17 +12,18 @@
 		"check-types": "tsc"
 	},
 	"devDependencies": {
-		"@sveltejs/vite-plugin-svelte": "^2.4.2",
+		"@sveltejs/vite-plugin-svelte": "^2.4.5",
 		"@tsconfig/svelte": "^5.0.0",
 		"@types/node": "^20.5.0",
 		"@typescript-eslint/eslint-plugin": "^6.4.0",
 		"@typescript-eslint/parser": "^6.4.0",
 		"eslint": "^8.47.0",
 		"eslint-plugin-svelte": "^2.32.4",
-		"svelte": "^4.0.5",
-		"svelte-check": "^3.4.6",
-		"tslib": "^2.6.0",
-		"typescript": "^5.0.2",
-		"vite": "^4.4.5"
+		"svelte": "^4.2.0",
+		"svelte-check": "^3.5.0",
+		"svelte-eslint-parser": "^0.32.2",
+		"tslib": "^2.6.1",
+		"typescript": "^5.1.6",
+		"vite": "^4.4.9"
 	}
 }
